# android-study

./: .gitignore  build.gradle  songsong.jks
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/song/androidstudy/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/song/androidstudy/androidjunit4/: InstrumentionTest.java
app/src/androidTest/java/com/song/androidstudy/memory/: MemoryTest.java
app/src/androidTest/java/com/song/androidstudy/network/: NetWorkTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/song/androidstudy/ipc/: ITestAidlInterface.aidl
app/src/main/assets/: xposed_init
app/src/main/cpp/: mobinfo-lib.cpp  native-lib.cpp  song-log.h  song-mobinfo.cpp  song-mobinfo.h  song-tool.cpp  song-tool.h  test.cpp
app/src/main/cpp/include/: native-lib.h  song-log.h  song-mobinfo.h  song-tool.h
app/src/main/java/com/song/androidstudy/: App.java  MainActivity.java  PowerKeyBroadcastReceiver.java  TestActivity.java
app/src/main/java/com/song/androidstudy/bitmap/: BitmapActivity.java
app/src/main/java/com/song/androidstudy/crypto/: AESUtils.java  Base64.java  HashUtils.java  HexBinDecOctUtils.java  RSAUtils.java
app/src/main/java/com/song/androidstudy/gestureunlock/: GestureLockView.java  GestureUnlockActivity.java
app/src/main/java/com/song/androidstudy/ipc/: IPCIntroduction.java  IPCService.java  IPCTestActivity.java
app/src/main/java/com/song/androidstudy/lifecycle/: DialogTestActivity.java  OneActivity.java  TwoActivity.java
app/src/main/java/com/song/androidstudy/net/: GithubService.java  Repository.java  User.java
app/src/main/java/com/song/androidstudy/permission/: TestBasePermissionActivity.java  TestPermissionActivity.java
app/src/main/java/com/song/androidstudy/preferences/: PreferencesProvider.java  PreferencesProviderUtils.java
app/src/main/java/com/song/androidstudy/rxjavaretrofit/: GtService.java  (+2 more)
app/src/main/res/drawable/: bitmap_drawable_test.xml  ic_widget_recorder.xml  ic_widget_recording.xml  ic_widget_stop.xml
app/src/main/res/layout/: activity_bitmap.xml  activity_dialog_test.xml  activity_dispatch_touch_event.xml  activity_gesture_unlock.xml  activity_google_re_captcha.xml  activity_ipctest.xml  activity_login_test.xml  activity_one.xml  activity_retrofit_rxjava.xml  activity_test.xml  activity_test_base_permission.xml  activity_test_cpp.xml  activity_test_permission.xml  activity_thread.xml  activity_two.xml  activity_wifi.xml  content_main.xml  item_wifi.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: attrs.xml  strings.xml  styles.xml
app/src/test/java/com/song/androidstudy/: ExampleUnitTest.java
(+81 files in other folders)
